--- a/src/style/00-settings/_settings.scss
+++ b/src/style/00-settings/_settings.scss
@@ -1,9 +1,15 @@
 $black: #000;
 $white: #fff;
+$blue: #304FFE;
+$yellow: #FCF22B;
+$lightgrey: #F9FBFC;
 
 $colors: (
 	black: $black,
 	white: $white,
+	blue: $blue,
+	yellor: $yellow,
+	lightgrey: $lightgrey,
 );
 
 @import '~baseguide/scss/baseguide/00-settings/settings';
