--- a/templates/includes/sections/text.twig
+++ b/templates/includes/sections/text.twig
@@ -4,6 +4,12 @@
             <div class="text-black">
 				<h1>{{ title }}</h1>
 				<p>{{ text }}</p>
+				<a href="" class="btn">Button</a>
+				<a href="" class="btn btn-secondary">Button</a>
+
+				<div style="width: 100%; margin-bottom: 2rem;"></div>
+				<a href="" class="btn btn-large">Button Large</a>
+
  			</div>
 		</div>
     </div>
