--- a/src/style/02-base/_headings.scss
+++ b/src/style/02-base/_headings.scss
@@ -1,1 +1,34 @@
 @import '~baseguide/scss/baseguide/02-base/headings';
+
+h1, .h1 {
+	font-size: 4rem;
+	font-weight: bold;
+}
+
+h2, .h2 {
+	font-size: 3rem;
+	font-weight: bold;
+}
+
+h3, .h3 {
+	font-size: 2rem;
+	font-weight: bold;
+}
+
+h4, .h4 {
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+
+h5, .h5 {
+	font-size: 1.125rem;
+	font-weight: bold;
+}
+
+p, a {
+	font-size: 1.5rem;
+
+	.small {
+		font-size: 1.125rem;
+	}
+}
