--- a/src/style/04-components/_button.scss
+++ b/src/style/04-components/_button.scss
@@ -6,6 +6,9 @@ $button-padding-horizontal: 2em;
 
 @import '~baseguide/scss/baseguide/04-components/button';
 
+.btn {
+	font-size: 1rem;
+}
 .btn-large {
 	font-size: 1.5rem;
 	padding: 1rem 2rem;
