--- a/templates/includes/sections/text.twig
+++ b/templates/includes/sections/text.twig
@@ -2,7 +2,11 @@
     <div class="row center-xs">
         <div class="col-xs-12 col-sm-6">
             <div class="text-black">
-				<h1>{{ title }}</h1>
+				<h1>Heading 1</h1>
+				<h2>Heading 2</h2>
+				<h3>Heading 3</h3>
+				<h4>Heading 4</h4>
+				<h5>Heading 5</h5>
 				<p>{{ text }}</p>
 				<a href="" class="btn">Button</a>
 				<a href="" class="btn btn-secondary">Button</a>
