--- a/templates/includes/sections/text.twig
+++ b/templates/includes/sections/text.twig
@@ -14,6 +14,10 @@
 				<div style="width: 100%; margin-bottom: 2rem;"></div>
 				<a href="" class="btn btn-large">Button Large</a>
 
+				<div style="width: 100%; margin-bottom: 2rem;"></div>
+				<a href="">Text link large</a>
+				<a href="" class="small">Text link</a>
+
  			</div>
 		</div>
     </div>
