--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -23,6 +23,7 @@
 @import '04-components/form-custom';
 @import '04-components/button';
 @import '04-components/table';
+@import '04-components/navbar';
 
 // Utilities
 @import '05-utilities/colors';
