--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -1,19 +1,21 @@
 <div class="container">
-		<div class="section">
-			<div class="row middle-xs">
-				<div class="col col-sm-12 col-md-6">
-					<div class="text-margin">
-						<h1>Title Xlarge</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non hendrerit felis.</p>
-						<button class="btn btn-large">Button Large</button>
-					</div>
+	<div class="section">
+		<div class="row middle-xs">
+			<div class="col col-sm-12 col-md-6">
+				<div class="text-margin">
+					<h1>Grow your business
+						with Cobiro</h1>
+					<p>Fully automated advertising tool to help you
+						create and optimise your google ads</p>
+					<button class="btn btn-large">Sign up free</button>
 				</div>
-				<div class="col col-sm-12 col-md-6">
-					<div class="img-responsive">
+			</div>
+			<div class="col col-sm-12 col-md-6">
+				<div class="img-responsive">
 
-					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 </div>
