--- a/src/style/05-utilities/_position.scss
+++ b/src/style/05-utilities/_position.scss
@@ -85,19 +85,20 @@
         -moz-justify-content: space-between;
         justify-content: space-between;
 	}
-
 	.col-auto-#{$breakpoint} {
 		width: auto;
 	}
+	.first-#{$breakpoint} {
+		order: -1;
+	}
+	.last-#{$breakpoint} {
+		order: 1;
+	}
 }
 
-.first-sm, .first-md {
-    order: -1;
+.flex {
+	display: flex;
 }
-.last-sm, .last-md {
-    order: 1;
-}
-
 
 .row:after {
 	content: none;
