--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -24,6 +24,7 @@
 @import '04-components/button';
 @import '04-components/table';
 @import '04-components/navbar';
+@import '04-components/featured-testimonial-single';
 
 // Utilities
 @import '05-utilities/colors';
