--- a/templates/index.twig
+++ b/templates/index.twig
@@ -3,6 +3,6 @@
 
 {% include 'includes/partials/header.twig' with pageContent %}
 
-{% include 'includes/sections/text.twig' with pageContent %}
+{% include 'includes/sections/featured-testimonal-single.twig' with pageContent %}
 
 {% include 'includes/partials/footer.twig' %}
