--- a/templates/index.twig
+++ b/templates/index.twig
@@ -5,4 +5,6 @@
 
 {% include 'includes/sections/featured-testimonal-single.twig' with pageContent %}
 
+{% include 'includes/sections/jumbo-header.twig' with pageContent %}
+
 {% include 'includes/partials/footer.twig' %}
