--- a/src/style/05-utilities/_space.scss
+++ b/src/style/05-utilities/_space.scss
@@ -1,8 +1,7 @@
 @import '~baseguide/scss/baseguide/05-utilities/space';
 
 .section {
-	margin-top: 80px;
-	margin-bottom: 80px;
+	margin: 80px 0;
 }
 
 .img-responsive {
