--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -12,6 +12,7 @@
 			</div>
 			<div class="col col-sm-12 col-md-6">
 				<div class="img-responsive">
+					<img src="{{url('includes/img/jumbo-header-image.svg')}}" alt="Cobiro logo"/>
 				</div>
 			</div>
 		</div>
