--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -19,6 +19,7 @@
 @import '03-objects/embed';
 
 // Components
+@import '04-components/card';
 @import '04-components/form';
 @import '04-components/form-custom';
 @import '04-components/button';
