3-up component: fixing mobile style

--- a/templates/includes/sections/3-up.twig
+++ b/templates/includes/sections/3-up.twig
@@ -8,25 +8,31 @@
 			<div class="col col-xs-12 col-md-4">
 				<div class="card">
 					<img src="includes/img/pencil.svg" />
-					<h4>Create</h4>
-					<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-					<a class="small" href="#">Learn more</a>
+					<div class="text-left text-center-md">
+						<h4>Create</h4>
+						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
+						<a class="small" href="#">Learn more</a>
+					</div>
 				</div>
 			</div>
 			<div class="col col-xs-12 col-md-4">
 				<div class="card">
 					<img src="includes/img/pencil.svg" />
-					<h4>Create</h4>
-					<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-					<a class="small" href="#">Learn more</a>
+					<div class="text-left text-center-md">
+						<h4>Create</h4>
+						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
+						<a class="small" href="#">Learn more</a>
+					</div>
 				</div>
 			</div>
 			<div class="col col-xs-12 col-md-4">
 				<div class="card">
 					<img src="includes/img/pencil.svg" />
-					<h4>Create</h4>
-					<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-					<a class="small" href="#">Learn more</a>
+					<div class="text-left text-center-md">
+						<h4>Create</h4>
+						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
+						<a class="small" href="#">Learn more</a>
+					</div>
 				</div>
 			</div>
 		</div>
