--- a/src/style/04-components/_card.scss
+++ b/src/style/04-components/_card.scss
@@ -10,4 +10,15 @@
 		max-width: 5rem;
 		margin-bottom: 1rem;
 	}
+	@include mq($until: md) {
+		display: flex;
+		align-items: flex-start;
+		padding: 1.25rem;
+
+		img {
+			width: 3rem;
+			max-width: 3rem;
+			margin-right: 1rem;
+		}
+	}
 }
