--- a/src/style/02-base/_headings.scss
+++ b/src/style/02-base/_headings.scss
@@ -32,3 +32,26 @@ p, a {
 		font-size: 1.125rem !important;
 	}
 }
+
+
+@include mq($until: md) {
+	h1 {
+		font-size: 2rem;
+	}
+	h2 {
+		font-size: 1.5rem;
+	}
+	h3 {
+		font-size: 1.25rem;
+	}
+	h4 {
+		font-size: 1.125rem;
+	}
+	p, a {
+		font-size: 1rem;
+
+		&.small {
+			font-size: 1rem !important;
+		}
+	}
+}
