--- a/src/style/04-components/_featured-testimonial-single.scss
+++ b/src/style/04-components/_featured-testimonial-single.scss
@@ -1,11 +1,6 @@
 .testimonal-box {
 	padding: 2.5rem 5rem;
 
-	@include mq($until: md) {
-		flex-direction: column;
-		padding: 2rem;
-	}
-
 	.testimonial-image-wrapper {
 		margin-right: 2.5rem;
 	}
@@ -13,4 +8,20 @@
 		width: 7.5rem;
 		max-width: 7.5rem;
 	}
+
+	@include mq($until: md) {
+		padding: 2rem;
+
+		.testimonial-image-wrapper {
+			margin-right: 1.25rem;
+		}
+
+		.testimonial-image {
+			width: 3rem;
+			max-width: 3rem;
+		}
+
+	}
+
+
 }
