section fetured company

--- a/src/style/03-objects/_image.scss
+++ b/src/style/03-objects/_image.scss
@@ -2,3 +2,12 @@
 	max-width: 100%;
 	height: 500px;
 }
+
+.customer-logo {
+	display: flex;
+	align-items: center;
+}
+
+.margin-bottom {
+	margin-bottom: 50px;
+}
