--- a/templates/index.twig
+++ b/templates/index.twig
@@ -8,5 +8,6 @@
 {% include 'includes/sections/featured-testimonal-single.twig' with pageContent %}
 
 {% include 'includes/sections/3-up.twig' with pageContent %}
+{% include 'includes/sections/featured-companies.twig' with pageContent %}
 
 {% include 'includes/partials/footer.twig' %}
