--- a/templates/index.twig
+++ b/templates/index.twig
@@ -7,4 +7,6 @@
 
 {% include 'includes/sections/featured-testimonal-single.twig' with pageContent %}
 
+{% include 'includes/sections/featured-companies.twig' with pageContent %}
+
 {% include 'includes/partials/footer.twig' %}
