explanation right section

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -8,6 +8,9 @@
 {% include 'includes/sections/featured-testimonal-single.twig' with pageContent %}
 
 {% include 'includes/sections/3-up.twig' with pageContent %}
+
 {% include 'includes/sections/featured-companies.twig' with pageContent %}
+
+{% include 'includes/sections/explanation-right.twig' with pageContent %}
 
 {% include 'includes/partials/footer.twig' %}
