--- a/src/style/04-components/_card.scss
+++ b/src/style/04-components/_card.scss
@@ -9,6 +9,18 @@
 		width: 5rem;
 		max-width: 5rem;
 		margin-bottom: 1rem;
+
+		&.card-img-large {
+			width: 11.25rem;
+			max-width: 11.25rem;
+			margin-bottom: 2.5rem;
+		}
+
+		&.social-icon {
+			width: 1.5rem;
+			max-width: 1.5rem;
+			margin: 0;
+		}
 	}
 	@include mq($until: md) {
 		display: flex;
