--- a/templates/index.twig
+++ b/templates/index.twig
@@ -13,4 +13,6 @@
 
 {% include 'includes/sections/explanation-right.twig' with pageContent %}
 
+{% include 'includes/sections/3-up-people.twig' with pageContent %}
+
 {% include 'includes/partials/footer.twig' %}
