--- a/src/style/04-components/_button.scss
+++ b/src/style/04-components/_button.scss
@@ -1,4 +1,5 @@
 $button-bg: $blue;
+$button-hover-bg: darken($blue, 20);
 $button-border-radius: 5px;
 $button-border-color: $blue;
 $button-padding-vertical: 0.5em;
