--- a/templates/includes/sections/3-up-people.twig
+++ b/templates/includes/sections/3-up-people.twig
@@ -6,57 +6,54 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 			</div>
 			<div class="col col-xs-12 col-md-6 col-lg-4">
-				<div class="card ">
-					<img class="card-img-large" src="includes/img/imgplaceholder.jpg" alt="person name"/>
-					<div class="text-left">
-						<div class="flex middle-xs between-xs space-xs-up">
+				<div class="card people">
+					<div class="card-header-wrapper">
+						<img class="card-img-large" src="includes/img/imgplaceholder.jpg" alt="person name"/>
+						<div class="flex middle-xs between-xs space-md-up text-left">
 							<div>
 								<h4>Title small</h4>
 								<h5 >Title Xsmall</h5>
 							</div>
 							<img class="social-icon" src="includes/img/linkedin.svg" alt="linkedin"/>
-
-
 						</div>
-						<p class="small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
-						<button class="btn hidden-md-up">View full profile</a>
+
 					</div>
+					<p class="small text-left-xs people-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
+					<button class="btn hidden-md-up" onclick="peopleClickHandler(event)">View full profile</button>
 				</div>
 			</div>
 			<div class="col col-xs-12 col-md-6 col-lg-4">
-				<div class="card ">
-					<img class="card-img-large" src="includes/img/imgplaceholder.jpg" alt="person name"/>
-					<div class="text-left">
-						<div class="flex middle-xs between-xs space-xs-up">
+				<div class="card people">
+					<div class="card-header-wrapper">
+						<img class="card-img-large" src="includes/img/imgplaceholder.jpg" alt="person name"/>
+						<div class="flex middle-xs between-xs space-md-up text-left">
 							<div>
 								<h4>Title small</h4>
 								<h5 >Title Xsmall</h5>
 							</div>
 							<img class="social-icon" src="includes/img/linkedin.svg" alt="linkedin"/>
-
-
 						</div>
-						<p class="small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
-						<button class="btn hidden-md-up">View full profile</a>
+
 					</div>
+					<p class="small text-left-xs people-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
+					<button class="btn hidden-md-up btn-people" onclick="peopleClickHandler(event)">View full profile</button>
 				</div>
 			</div>
 			<div class="col col-xs-12 col-md-6 col-lg-4">
-				<div class="card ">
-					<img class="card-img-large" src="includes/img/imgplaceholder.jpg" alt="person name"/>
-					<div class="text-left">
-						<div class="flex middle-xs between-xs space-xs-up">
+				<div class="card people">
+					<div class="card-header-wrapper">
+						<img class="card-img-large" src="includes/img/imgplaceholder.jpg" alt="person name"/>
+						<div class="flex middle-xs between-xs space-md-up text-left">
 							<div>
 								<h4>Title small</h4>
 								<h5 >Title Xsmall</h5>
 							</div>
 							<img class="social-icon" src="includes/img/linkedin.svg" alt="linkedin"/>
-
-
 						</div>
-						<p class="small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
-						<button class="btn hidden-md-up">View full profile</a>
+
 					</div>
+					<p class="small text-left-xs people-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
+					<button class="btn hidden-md-up btn-people" onclick="peopleClickHandler(event)">View full profile</button>
 				</div>
 			</div>
 		</div>
