--- a/templates/includes/sections/explanation-right.twig
+++ b/templates/includes/sections/explanation-right.twig
@@ -1,20 +1,17 @@
 <div class="container">
 	<div class="section">
-		<div class="row middle-xs">
+		<div class="row middle-xs reverse">
 			<div class="col col-sm-12 col-md-6">
-				<div class="text-margin">
-					<h2>No marketing skills required</h2>
-					<p>You do not need any online marketing skills to become successful with Google Ads.
-						Cobiro will handle all actions that are required.</p>
-					<a href="/">Show me how</a>
-				</div>
-			</div>
-			<div class="col col-sm-12 col-md-6">
-				<div class="img-responsive">
+				<div class="img-responsive space-sm space-xs">
 					<img src="{{url('includes/img/busy-lady.svg')}}" alt="Cobiro logo"/>
 				</div>
 			</div>
+			<div class="col col-sm-12 col-md-6">
+				<h2 class="">No marketing skills required</h2>
+				<p>You do not need any online marketing skills to become successful with Google Ads.
+					Cobiro will handle all actions that are required.</p>
+				<a href="/">Show me how</a>
+		</div>
 		</div>
 	</div>
 </div>
-
