--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -1,14 +1,14 @@
 <div class="container">
 	<div class="section">
-		<div class="row middle-xs">
-			<div class="col col-sm-12 col-md-6">
-				<div class="text-margin">
+		<div class="row middle-xs center-xs">
+			<div class="col col-sm-12 col-md-6 text-left-md">
+
 					<h1>Grow your business
 						with Cobiro</h1>
 					<p>Fully automated advertising tool to help you
 						create and optimise your google ads</p>
 					<button class="btn btn-large">Sign up free</button>
-				</div>
+
 			</div>
 			<div class="col col-sm-12 col-md-6">
 				<div class="img-responsive">
@@ -17,5 +17,4 @@
 			</div>
 		</div>
 	</div>
-</div>
 </div>
