--- a/templates/includes/sections/explanation-left.twig
+++ b/templates/includes/sections/explanation-left.twig
@@ -1,9 +1,9 @@
 <div class="container">
 	<div class="section">
-		<div class="row middle-xs">
+		<div class="row middle-xs reverse">
 			<div class="col col-sm-12 col-md-6">
 				<div class="img-responsive space-sm space-xs">
-					<img src="{{url('includes/img/busy-lady.svg')}}" alt="Marketing Image"/>
+					<img src="{{url('includes/img/lazy-man.svg')}}" alt="Marketing Image" />
 				</div>
 			</div>
 			<div class="col col-sm-12 col-md-6">
@@ -11,7 +11,7 @@
 				<p>You do not need any online marketing skills to become successful with Google Ads.
 					Cobiro will handle all actions that are required.</p>
 				<a href="/">Show me how</a>
-		</div>
+			</div>
 		</div>
 	</div>
 </div>
