--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -2,17 +2,15 @@
 	<div class="section">
 		<div class="row middle-xs center-xs">
 			<div class="col col-sm-12 col-md-6 text-left-md">
-
-					<h1>Grow your business
-						with Cobiro</h1>
-					<p>Fully automated advertising tool to help you
-						create and optimise your google ads</p>
-					<button class="btn btn-large">Sign up free</button>
-
+				<h1>Grow your business
+					with Cobiro</h1>
+				<p>Fully automated advertising tool to help you
+					create and optimise your google ads</p>
+				<button class="btn btn-large space-xs space-sm">Sign up free</button>
 			</div>
 			<div class="col col-sm-12 col-md-6">
 				<div class="img-responsive">
-					<img src="{{url('includes/img/jumbo-header-image.svg')}}" alt="Cobiro logo"/>
+					<img src="{{url('includes/img/jumbo-header-image.svg')}}" alt="Cobiro logo" />
 				</div>
 			</div>
 		</div>
