Setting up accordion

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -19,4 +19,6 @@
 
 {% include 'includes/sections/3-up-people.twig' with pageContent %}
 
+{% include 'includes/sections/accordion-faq.twig' with pageContent %}
+
 {% include 'includes/partials/footer.twig' %}
