--- a/src/style/04-components/_button.scss
+++ b/src/style/04-components/_button.scss
@@ -19,3 +19,26 @@ $button-padding-horizontal: 2em;
 	background-color: transparent;
 	color: $blue;
 }
+.btn-toggle {
+	padding: 1rem;
+	position: relative;
+
+	span {
+		display: none;
+	}
+
+	&::before {
+		content: '+';
+		position: absolute;
+		top: 48%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	&.active {
+		&::before {
+			content: '-';
+		}
+	}
+
+}
