--- a/src/style/04-components/_card.scss
+++ b/src/style/04-components/_card.scss
@@ -4,6 +4,7 @@
 	padding: 2rem;
 	text-align: center;
 	margin-top: 5rem;
+	position: relative;
 
 	img {
 		width: 5rem;
@@ -35,12 +36,15 @@
 			.people-description {
 				max-height: 0;
 				overflow: hidden;
+				margin: 0;
+				opacity: 0;
 				transition: all 0.4s ease;
 			}
 
 			&.expand {
 				.people-description {
-					max-height: 75rem;
+					margin: 1.5rem 0;
+					opacity: 1;
 				}
 			}
 
