--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -19,10 +19,11 @@
 @import '03-objects/embed';
 
 // Components
+@import '04-components/button';
 @import '04-components/card';
+@import '04-components/accordion';
 @import '04-components/form';
 @import '04-components/form-custom';
-@import '04-components/button';
 @import '04-components/table';
 @import '04-components/navbar';
 @import '04-components/featured-testimonial-single';
