--- a/templates/index.twig
+++ b/templates/index.twig
@@ -3,6 +3,8 @@
 
 {% include 'includes/partials/header.twig' with pageContent %}
 
+{% include 'includes/sections/list-pricing.twig' with pageContent %}
+
 {% include 'includes/sections/jumbo-header.twig' with pageContent %}
 
 {% include 'includes/sections/featured-testimonal-single.twig' with pageContent %}
