--- a/templates/index.twig
+++ b/templates/index.twig
@@ -21,4 +21,6 @@
 
 {% include 'includes/sections/accordion-faq.twig' with pageContent %}
 
+{% include 'includes/sections/text-editor.twig' with pageContent %}
+
 {% include 'includes/partials/footer.twig' %}
