--- a/src/style/04-components/_navbar.scss
+++ b/src/style/04-components/_navbar.scss
@@ -48,6 +48,13 @@ nav {
 			overflow: hidden;
 			transition: all 0.4s ease;
 
+			.container {
+				transition: all 0.4s ease;
+				padding-top: 2rem;
+				padding-bottom: 2rem;
+				transform: translateY(-2rem);
+			}
+
 			a, li, img {
 				opacity: 0;
 				transition: all 0.4s ease;
@@ -75,9 +82,11 @@ nav {
 
 		.expand {
 			.submenu {
-				max-height: 2000px;
-				padding: 2rem 0;
 				border-bottom: 1px solid #DDDDDD;
+
+				.container {
+					transform: translateY(0);
+				}
 
 				a, li, img {
 					opacity: 1;
@@ -175,6 +184,4 @@ nav {
 
 		}
 	}
-
-
 }
