style price list

--- a/templates/includes/sections/list-pricing.twig
+++ b/templates/includes/sections/list-pricing.twig
@@ -8,28 +8,36 @@
 			</div>
 
 			<div class="col col-xs-12 col-md-4 col-md-offset-2">
-				<div class="card">
+				<div class="card flex center">
 					<div>
 						<h4>Cobiro Free</h4>
 						<p class="price">$0</p>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<button class="btn btn-large btn-secondary">Sign up free</button>
-						<ul class="list-unstyled text-left-xs">
-							<li class="list-unstyled">Google Search</li>
-							<li class="list-unstyled">Google Shopping</li>
-							<li class="list-unstyled">Google CSS (basic)</li>
+						<button class="btn btn-large btn-secondary space-xs-up">Sign up free</button>
+						<ul class="text-left-xs list-unstyled">
+							<li>Google Search</li>
+							<li>Google Shopping</li>
+							<li>Google CSS (basic)</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 
 			<div class="col col-xs-12 col-md-4">
-				<div class="card">
+				<div class="card flex center">
 					<div>
 						<h4>Cobiro Free</h4>
 						<p class="price">$49</p>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<button class="btn btn-large">Sign up now</button>
+						<button class="btn btn-large space-xs-up">Sign up now</button>
+						<ul class="text-left-xs list-unstyled">
+							<li>Google Search</li>
+							<li>Google Shopping</li>
+							<li>Google CSS (basic)</li>
+							<hr class="extra-line">
+							<li>Google Shopping</li>
+							<li>Google CSS (basic)</li>
+						</ul>
 					</div>
 				</div>
 			</div>
