--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -27,6 +27,8 @@
 @import '04-components/table';
 @import '04-components/navbar';
 @import '04-components/featured-testimonial-single';
+@import '04-components/price';
+
 
 // Utilities
 @import '05-utilities/colors';
