footer component: initial setup and styling

--- a/src/style/00-settings/_settings.scss
+++ b/src/style/00-settings/_settings.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $blue: #304FFE;
 $yellow: #FCF22B;
 $lightgrey: #F9FBFC;
+$mediumgrey: #DDDDDD;
 $grey: #D6D6D6;
 $darkgrey: #4F525F;
 
@@ -12,6 +13,7 @@ $colors: (
 	blue: $blue,
 	yellor: $yellow,
 	lightgrey: $lightgrey,
+	mediumgrey: $mediumgrey,
 	grey: $grey,
 	darkgrey: $darkgrey,
 );
