--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -26,6 +26,7 @@
 @import '04-components/form-custom';
 @import '04-components/table';
 @import '04-components/navbar';
+@import '04-components/footer';
 @import '04-components/featured-testimonial-single';
 @import '04-components/price';
 
