--- a/templates/includes/partials/footer.twig
+++ b/templates/includes/partials/footer.twig
@@ -1,3 +1,76 @@
+		<footer>
+			<div class="container">
+				<div class="row section">
+					<div class="col col-xs-12 col-lg-4 center-xs start-lg space-xs space-sm space-md">
+						<img class="footer-logo" src="includes/img/cobiro-logo.svg" alt="Cobiro logo" />
+					</div>
+					<div class="col col-xs-12 col-lg-2 center-xs start-lg space-xs space-sm space-md">
+							<h4 class="space-xs-up">Product</h4>
+							<ul class="list-unstyled">
+								<li><a class="small text-darkgrey" href="#">Pricing</a></li>
+								<li><a class="small text-darkgrey" href="#">Features</a></li>
+								<li><a class="small text-darkgrey" href="#">Google CSS</a></li>
+								<li><a class="small text-darkgrey" href="#">Agencies</a></li>
+							</ul>
+					</div>
+					<div class="col col-xs-12 col-lg-2 center-xs start-lg space-xs space-sm space-md">
+							<h4 class="space-xs-up">Support</h4>
+							<ul class="list-unstyled">
+								<li><a class="small text-darkgrey" href="#">Getting started</a></li>
+								<li><a class="small text-darkgrey" href="#">Submit a request</a></li>
+								<li><a class="small text-darkgrey" href="#">Installation</a></li>
+								<li><a class="small text-darkgrey" href="#">Troubleshooting</a></li>
+								<li><a class="small text-darkgrey" href="#">Budget &amp; billing</a></li>
+								<li><a class="small text-darkgrey" href="#">Faq</a></li>
+							</ul>
+					</div>
+					<div class="col col-xs-12 col-lg-2 center-xs start-lg space-xs space-sm space-md">
+							<h4 class="space-xs-up">About us</h4>
+							<ul class="list-unstyled">
+								<li><a class="small text-darkgrey" href="#">About us</a></li>
+								<li><a class="small text-darkgrey" href="#">Careers</a></li>
+							</ul>
+					</div>
+					<div class="col col-xs-12 col-lg-2 center-xs start-lg space-xs space-sm space-md">
+							<h4 class="space-xs-up">Partnership</h4>
+							<ul class="list-unstyled">
+								<li><p class="small text-darkgrey">Cobiro is Official Google Premier PartnerCareers</p></li>
+								<li><img class="footer-image" src="includes/img/google-partner.jpg" alt="Google Partner"/></li>
+								<li><img class="footer-image" src="includes/img/google-css-partner.jpg" alt="Google CSS Partner"/></li>
+							</ul>
+					</div>
+				</div>
+
+
+			</div>
+			<div class="footer-bottom">
+				<div class="container">
+					<div class="row space-between">
+						<div class="col col-xs-12 col-sm-6">
+							<ul class="list-inline">
+								<li>
+									<a class="small text-darkgrey" href="#">Terms of Service</a>
+								</li>
+								<li>
+									<a class="small text-darkgrey" href="#">Privacy Policy</a>
+								</li>
+							</ul>
+						</div>
+						<div class="col col-xs-12 col-sm-6 text-right">
+							<a href="#" class="social-link">
+								<img src="includes/img/facebook.svg" alt="Facebook" />
+							</a>
+							<a href="#" class="social-link">
+								<img src="includes/img/twitter.svg" alt="Twitter" />
+							</a>
+							<a href="#" class="social-link">
+								<img src="includes/img/instagram.svg" alt="Instagram" />
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 		{% do view.registerJsFile( url('includes/js/bundle.min.js') ) %}
 	</body>
 </html>
