--- a/src/style/03-objects/_list.scss
+++ b/src/style/03-objects/_list.scss
@@ -1,6 +1,6 @@
 @import '~baseguide/scss/baseguide/03-objects/list';
 
-.list-unstyled li {
+.price-list li {
 	line-height: 2rem;
 
 	&::before {
@@ -11,7 +11,7 @@
 		background-position: 50% 50%;
 		top: 50%;
 		right: 0;
-		width: 2rem;
-		height: 1rem;
+		width: 2em;
+		height: 1em;
 	}
 }
