--- a/templates/includes/sections/list-pricing.twig
+++ b/templates/includes/sections/list-pricing.twig
@@ -13,8 +13,8 @@
 						<h4>Cobiro Free</h4>
 						<p class="price">$0</p>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<button class="btn btn-large btn-secondary space-xs-up">Sign up free</button>
-						<ul class="text-left-xs list-unstyled">
+						<button class="btn btn-secondary space-xs-up">Sign up free</button>
+						<ul class="text-left-xs price-list list-unstyled">
 							<li>Google Search</li>
 							<li>Google Shopping</li>
 							<li>Google CSS (basic)</li>
@@ -29,8 +29,8 @@
 						<h4>Cobiro Free</h4>
 						<p class="price">$49</p>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<button class="btn btn-large space-xs-up">Sign up now</button>
-						<ul class="text-left-xs list-unstyled">
+						<button class="btn space-xs-up">Sign up now</button>
+						<ul class="text-left-xs price-list list-unstyled">
 							<li>Google Search</li>
 							<li>Google Shopping</li>
 							<li>Google CSS (basic)</li>
