minor not so minor styling fixes

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -16,6 +16,7 @@
 // Objects
 @import '03-objects/list';
 @import '03-objects/grid';
+@import '03-objects/image';
 @import '03-objects/embed';
 
 // Components
