--- a/templates/includes/sections/explanation-right.twig
+++ b/templates/includes/sections/explanation-right.twig
@@ -1,17 +1,19 @@
-<div class="container">
-	<div class="section">
+<section class="section">
+	<div class="container">
 		<div class="row middle-xs">
 			<div class="col col-sm-12 col-md-6">
 				<div class="img-responsive space-sm space-xs">
-					<img src="{{url('includes/img/busy-lady.svg')}}" alt="Marketing Image"/>
+					<img src="{{url('includes/img/busy-lady.svg')}}" alt="Marketing Image" />
 				</div>
 			</div>
 			<div class="col col-sm-12 col-md-6">
-				<h2 class="">No marketing skills required</h2>
-				<p>You do not need any online marketing skills to become successful with Google Ads.
-					Cobiro will handle all actions that are required.</p>
-				<a href="/">Show me how</a>
-		</div>
+				<div class="text-padding">
+					<h2 class="">No marketing skills required</h2>
+					<p>You do not need any online marketing skills to become successful with Google Ads.
+						Cobiro will handle all actions that are required.</p>
+					<a href="/">Show me how</a>
+				</div>
+			</div>
 		</div>
 	</div>
-</div>
+</section>
