--- a/templates/includes/sections/featured-companies.twig
+++ b/templates/includes/sections/featured-companies.twig
@@ -1,27 +1,24 @@
-
-
-<div class="container">
-	<div class="section">
-		<div class="row center-sm">
-
-			<div class="col col-xs-12">
-				<h2>You’ll be in good company</h2>
-				<p>Join more than 50,000 customers who manage ads better</p>
-
-				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="{{url('includes/img/thomas-logo.svg')}}" alt="customer logo"/>
+<section class="section">
+	<div class="section-inner bg-lightgrey">
+		<div class="container">
+			<div class="row center-xs middle-xs text-center">
+				<div class="col col-xs-12 space-xs-up">
+					<h2>You’ll be in good company</h2>
+					<p>Join more than 50,000 customers who manage ads better</p>
 				</div>
 				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="{{url('includes/img/google-logo.svg')}}" alt="customer logo"/>
+					<img src="{{url('includes/img/thomas-logo.svg')}}" alt="customer logo" />
 				</div>
 				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="{{url('includes/img/boozt-logo.svg')}}" alt="customer logo"/>
+					<img src="{{url('includes/img/google-logo.svg')}}" alt="customer logo" />
 				</div>
 				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="{{url('includes/img/thomas-logo.svg')}}" alt="customer logo"/>
+					<img src="{{url('includes/img/boozt-logo.svg')}}" alt="customer logo" />
+				</div>
+				<div class="customer-logo col col-xs-6 col-md-3">
+					<img src="{{url('includes/img/thomas-logo.svg')}}" alt="customer logo" />
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
-
+</section>
