--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -1,18 +1,16 @@
-<div class="container">
-	<div class="section">
-		<div class="row middle-xs center-xs">
-			<div class="col col-sm-12 col-md-6 text-left-md">
-				<h1>Grow your business
-					with Cobiro</h1>
-				<p>Fully automated advertising tool to help you
-					create and optimise your google ads</p>
-				<button class="btn btn-large space-xs space-sm">Sign up free</button>
-			</div>
-			<div class="col col-sm-12 col-md-6">
-				<div class="img-responsive">
-					<img src="{{url('includes/img/jumbo-header-image.svg')}}" alt="Cobiro logo" />
+<section class="section">
+	<div class="container">
+		<div class="row middle-xs center-xs text-center-xs">
+			<div class="col col-xs-12 col-md-6 text-left-md">
+				<div class="text-padding">
+					<h1>Grow your business with Cobiro</h1>
+					<p>Fully automated advertising tool to help you create and optimise your google ads</p>
+					<button class="btn btn-large space-xs space-sm">Sign up free</button>
 				</div>
+			</div>
+			<div class="col col-xs-12 col-md-6">
+				<img class="img-responsive img-full-width" src="{{url('includes/img/jumbo-header-image.svg')}}" alt="Cobiro logo" />
 			</div>
 		</div>
 	</div>
-</div>
+</section>
