--- a/src/style/03-objects/_image.scss
+++ b/src/style/03-objects/_image.scss
@@ -1,13 +1,16 @@
 .img-responsive {
 	max-width: 100%;
-	height: 500px;
+}
+
+.img-full-width {
+	width: 100%;
 }
 
 .customer-logo {
 	display: flex;
 	align-items: center;
 }
-
-.margin-bottom {
-	margin-bottom: 50px;
+.customer-logo>img {
+	width: 12.5rem;
+	margin-top: 2.5rem;
 }
