--- a/src/style/04-components/_button.scss
+++ b/src/style/04-components/_button.scss
@@ -10,9 +10,11 @@ $button-padding-horizontal: 2em;
 .btn {
 	font-size: 1rem;
 }
-.btn-large {
-	font-size: 1.5rem;
-	padding: 1rem 2rem;
+@include mq($from: md) {
+	.btn-large {
+		font-size: 1.5rem;
+		padding: 1rem 2rem;
+	}
 }
 
 .btn-secondary {
