--- a/templates/includes/sections/explanation-left.twig
+++ b/templates/includes/sections/explanation-left.twig
@@ -1,5 +1,5 @@
-<div class="container">
-	<div class="section">
+<section class="section">
+	<div class="container">
 		<div class="row middle-xs reverse">
 			<div class="col col-sm-12 col-md-6">
 				<div class="img-responsive space-sm space-xs">
@@ -7,11 +7,13 @@
 				</div>
 			</div>
 			<div class="col col-sm-12 col-md-6">
-				<h2 class="">No marketing skills required</h2>
-				<p>You do not need any online marketing skills to become successful with Google Ads.
-					Cobiro will handle all actions that are required.</p>
-				<a href="/">Show me how</a>
+				<div class="text-padding">
+					<h2 class="">No marketing skills required</h2>
+					<p>You do not need any online marketing skills to become successful with Google Ads.
+						Cobiro will handle all actions that are required.</p>
+					<a href="/">Show me how</a>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
