--- a/templates/includes/sections/jumbo-cta.twig
+++ b/templates/includes/sections/jumbo-cta.twig
@@ -1,11 +1,13 @@
-<div class="container">
-	<div class="section">
-		<div class="row center-xs">
-			<div class="col col-xs-12">
-				<h2>It’s easy to get started</h2>
-				<p>And it’s free. Two things everyone loves</p>
-				<button class="btn btn-large">Sign up free</button>
+<section class="section">
+	<div class="section-inner bg-lightgrey">
+		<div class="container">
+			<div class="row center-xs text-center">
+				<div class="col col-xs-12">
+					<h2>It’s easy to get started</h2>
+					<p>And it’s free. Two things everyone loves</p>
+					<button class="btn btn-large">Sign up free</button>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
