--- a/templates/includes/partials/footer.twig
+++ b/templates/includes/partials/footer.twig
@@ -1,10 +1,10 @@
 		<footer>
 			<div class="container">
 				<div class="row section">
-					<div class="col col-xs-12 col-lg-4 center-xs start-lg space-xs space-sm space-md">
+					<div class="col col-xs-12 col-lg-4 text-center-xs text-left-lg center-xs start-lg space-xs space-sm space-md">
 						<img class="footer-logo" src="includes/img/cobiro-logo.svg" alt="Cobiro logo" />
 					</div>
-					<div class="col col-xs-12 col-lg-2 center-xs start-lg space-xs space-sm space-md">
+					<div class="col col-xs-12 col-lg-2 text-center-xs text-left-lg center-xs start-lg space-xs space-sm space-md">
 							<h4 class="space-xs-up">Product</h4>
 							<ul class="list-unstyled">
 								<li><a class="small text-darkgrey" href="#">Pricing</a></li>
@@ -13,7 +13,7 @@
 								<li><a class="small text-darkgrey" href="#">Agencies</a></li>
 							</ul>
 					</div>
-					<div class="col col-xs-12 col-lg-2 center-xs start-lg space-xs space-sm space-md">
+					<div class="col col-xs-12 col-lg-2 text-center-xs text-left-lg center-xs start-lg space-xs space-sm space-md">
 							<h4 class="space-xs-up">Support</h4>
 							<ul class="list-unstyled">
 								<li><a class="small text-darkgrey" href="#">Getting started</a></li>
@@ -24,14 +24,14 @@
 								<li><a class="small text-darkgrey" href="#">Faq</a></li>
 							</ul>
 					</div>
-					<div class="col col-xs-12 col-lg-2 center-xs start-lg space-xs space-sm space-md">
+					<div class="col col-xs-12 col-lg-2 text-center-xs text-left-lg center-xs start-lg space-xs space-sm space-md">
 							<h4 class="space-xs-up">About us</h4>
 							<ul class="list-unstyled">
 								<li><a class="small text-darkgrey" href="#">About us</a></li>
 								<li><a class="small text-darkgrey" href="#">Careers</a></li>
 							</ul>
 					</div>
-					<div class="col col-xs-12 col-lg-2 center-xs start-lg space-xs space-sm space-md">
+					<div class="col col-xs-12 col-lg-2 text-center-xs text-left-lg center-xs start-lg space-xs space-sm space-md">
 							<h4 class="space-xs-up">Partnership</h4>
 							<ul class="list-unstyled">
 								<li><p class="small text-darkgrey">Cobiro is Official Google Premier PartnerCareers</p></li>
