--- a/templates/includes/sections/3-up-people.twig
+++ b/templates/includes/sections/3-up-people.twig
@@ -19,7 +19,7 @@
 
 					</div>
 					<p class="small text-left-xs people-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
-					<button class="btn hidden-md-up" onclick="peopleClickHandler(event)">View full profile</button>
+					<button class="btn hidden-md-up" onclick="peopleClickHandler(event)" aria-label="View full profile">View full profile</button>
 				</div>
 			</div>
 			<div class="col col-xs-12 col-md-6 col-lg-4">
@@ -36,7 +36,7 @@
 
 					</div>
 					<p class="small text-left-xs people-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
-					<button class="btn hidden-md-up btn-people" onclick="peopleClickHandler(event)">View full profile</button>
+					<button class="btn hidden-md-up btn-people" onclick="peopleClickHandler(event)" aria-label="View full profile">View full profile</button>
 				</div>
 			</div>
 			<div class="col col-xs-12 col-md-6 col-lg-4">
@@ -53,7 +53,7 @@
 
 					</div>
 					<p class="small text-left-xs people-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
-					<button class="btn hidden-md-up btn-people" onclick="peopleClickHandler(event)">View full profile</button>
+					<button class="btn hidden-md-up btn-people" onclick="peopleClickHandler(event)" aria-label="View full profile">View full profile</button>
 				</div>
 			</div>
 		</div>
