--- a/templates/includes/sections/3-up.twig
+++ b/templates/includes/sections/3-up.twig
@@ -7,7 +7,7 @@
 			</div>
 			<div class="col col-xs-12 col-md-4">
 				<div class="card">
-					<img src="includes/img/pencil.svg" />
+					<img src="includes/img/pencil.svg" alt="pencil icon"/>
 					<div class="text-left text-center-md">
 						<h4>Create</h4>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
@@ -17,7 +17,7 @@
 			</div>
 			<div class="col col-xs-12 col-md-4">
 				<div class="card">
-					<img src="includes/img/pencil.svg" />
+					<img src="includes/img/pencil.svg" alt="pencil icon"/>
 					<div class="text-left text-center-md">
 						<h4>Create</h4>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
@@ -27,7 +27,7 @@
 			</div>
 			<div class="col col-xs-12 col-md-4">
 				<div class="card">
-					<img src="includes/img/pencil.svg" />
+					<img src="includes/img/pencil.svg" alt="pencil icon"/>
 					<div class="text-left text-center-md">
 						<h4>Create</h4>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
