--- a/templates/includes/sections/accordion-faq.twig
+++ b/templates/includes/sections/accordion-faq.twig
@@ -8,28 +8,28 @@
 			<div class="col col-xs-12 accordion">
 				<div class="card text-left">
 					<h5>Title Xsmall</h5>
-					<button class="btn btn-accordion btn-toggle btn-secondary active" onclick="accordionClickHandler(event)"><span>+</span></button>
+					<button class="btn btn-accordion btn-toggle btn-secondary active" onclick="accordionClickHandler(event)" aria-label="Expand accordion panel"><span>+</span></button>
 					<p class="small accordion-text expanded-accordion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget. Nulla blandit libero sit amet ligula vestibulum ultrices. Proin eget hendrerit est. Aliquam mauris mi, tempor ut cursus sit amet, semper quis enim. Nulla finibus nulla velit, sed sodales orci dapibus ut.</p>
 				</div>
 			</div>
 			<div class="col col-xs-12 accordion">
 				<div class="card text-left">
 					<h5>Title Xsmall</h5>
-					<button class="btn btn-accordion btn-toggle btn-secondary" onclick="accordionClickHandler(event)"><span>+</span></button>
+					<button class="btn btn-accordion btn-toggle btn-secondary" onclick="accordionClickHandler(event)" aria-label="Expand accordion panel"><span>+</span></button>
 					<p class="small accordion-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget. Nulla blandit libero sit amet ligula vestibulum ultrices. Proin eget hendrerit est. Aliquam mauris mi, tempor ut cursus sit amet, semper quis enim. Nulla finibus nulla velit, sed sodales orci dapibus ut.</p>
 				</div>
 			</div>
 			<div class="col col-xs-12 accordion">
 				<div class="card text-left">
 					<h5>Title Xsmall</h5>
-					<button class="btn btn-accordion btn-toggle btn-secondary" onclick="accordionClickHandler(event)"><span>+</span></button>
+					<button class="btn btn-accordion btn-toggle btn-secondary" onclick="accordionClickHandler(event)" aria-label="Expand accordion panel"><span>+</span></button>
 					<p class="small accordion-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget. Nulla blandit libero sit amet ligula vestibulum ultrices. Proin eget hendrerit est. Aliquam mauris mi, tempor ut cursus sit amet, semper quis enim. Nulla finibus nulla velit, sed sodales orci dapibus ut.</p>
 				</div>
 			</div>
 			<div class="col col-xs-12 accordion">
 				<div class="card text-left">
 					<h5>Title Xsmall</h5>
-					<button class="btn btn-accordion btn-toggle btn-secondary" onclick="accordionClickHandler(event)"><span>+</span></button>
+					<button class="btn btn-accordion btn-toggle btn-secondary" onclick="accordionClickHandler(event)" aria-label="Expand accordion panel"><span>+</span></button>
 					<p class="small accordion-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget. Nulla blandit libero sit amet ligula vestibulum ultrices. Proin eget hendrerit est. Aliquam mauris mi, tempor ut cursus sit amet, semper quis enim. Nulla finibus nulla velit, sed sodales orci dapibus ut.</p>
 				</div>
 			</div>
