--- a/templates/includes/sections/jumbo-cta.twig
+++ b/templates/includes/sections/jumbo-cta.twig
@@ -5,7 +5,7 @@
 				<div class="col col-xs-12">
 					<h2>It’s easy to get started</h2>
 					<p>And it’s free. Two things everyone loves</p>
-					<button class="btn btn-large">Sign up free</button>
+					<button class="btn btn-large" aria-label="Sign up free">Sign up free</button>
 				</div>
 			</div>
 		</div>
