--- a/templates/includes/sections/list-pricing.twig
+++ b/templates/includes/sections/list-pricing.twig
@@ -13,7 +13,7 @@
 						<h4>Cobiro Free</h4>
 						<p class="price">$0</p>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<button class="btn btn-secondary space-xs-up">Sign up free</button>
+						<button class="btn btn-secondary space-xs-up" aria-label="Sign up free">Sign up free</button>
 						<ul class="text-left-xs price-list list-unstyled">
 							<li>Google Search</li>
 							<li>Google Shopping</li>
@@ -29,12 +29,14 @@
 						<h4>Cobiro Free</h4>
 						<p class="price">$49</p>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<button class="btn space-xs-up">Sign up now</button>
+						<button class="btn space-xs-up" aria-label="Sign up now">Sign up now</button>
 						<ul class="text-left-xs price-list list-unstyled">
 							<li>Google Search</li>
 							<li>Google Shopping</li>
 							<li>Google CSS (basic)</li>
+						</ul>
 							<hr class="extra-line">
+						<ul class="text-left-xs price-list list-unstyled">
 							<li>Google Shopping</li>
 							<li>Google CSS (basic)</li>
 						</ul>
