--- a/templates/includes/partials/header.twig
+++ b/templates/includes/partials/header.twig
@@ -4,8 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
     <title>{{ title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="referrer" content="origin-when-cross-origin" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+	<meta name="referrer" content="origin-when-cross-origin" />
+	<meta name="description" content="Test" />
 
 	{% do view.registerCssFile( url('includes/css/style.css') ) %}
 </head>
