--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -5,7 +5,7 @@
 				<div class="text-padding">
 					<h1>Grow your business with Cobiro</h1>
 					<p>Fully automated advertising tool to help you create and optimise your google ads</p>
-					<button class="btn btn-large space-xs space-sm">Sign up free</button>
+					<button class="btn btn-large space-xs space-sm" aria-label="Sign up free">Sign up free</button>
 				</div>
 			</div>
 			<div class="col col-xs-12 col-md-6">
