--- a/templates/includes/sections/list-pricing.twig
+++ b/templates/includes/sections/list-pricing.twig
@@ -11,7 +11,7 @@
 				<div class="card flex center">
 					<div>
 						<h4>Cobiro Free</h4>
-						<p class="price">$0</p>
+						<p class="price h1">$0</p>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
 						<button class="btn btn-secondary space-xs-up" aria-label="Sign up free">Sign up free</button>
 						<ul class="text-left-xs price-list list-unstyled">
@@ -27,7 +27,7 @@
 				<div class="card flex center">
 					<div>
 						<h4>Cobiro Free</h4>
-						<p class="price">$49</p>
+						<p class="price h1">$49</p>
 						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
 						<button class="btn space-xs-up" aria-label="Sign up now">Sign up now</button>
 						<ul class="text-left-xs price-list list-unstyled">
