fix urls for live site

--- a/templates/includes/partials/footer.twig
+++ b/templates/includes/partials/footer.twig
@@ -71,6 +71,6 @@
 				</div>
 			</div>
 		</footer>
-		{% do view.registerJsFile( url('includes/js/bundle.min.js') ) %}
+		<script src="includes/js/bundle.min.js"></script>
 	</body>
 </html>
