--- a/templates/includes/partials/header.twig
+++ b/templates/includes/partials/header.twig
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	<meta name="referrer" content="origin-when-cross-origin" />
 	<meta name="description" content="Test" />
-
-	{% do view.registerCssFile( url('includes/css/style.css') ) %}
+	<link rel="stylesheet" type="text/css" href="includes/css/style.css">
 </head>
 <body>
 {% include 'includes/partials/menu.twig' %}
