--- a/templates/includes/partials/menu.twig
+++ b/templates/includes/partials/menu.twig
@@ -7,7 +7,7 @@
 					<div class="row start-xs middle-xs">
 						<div class="col col-auto-lg">
 							<div class="brand">
-								<a href="/" ><img src="{{url('includes/img/logo.svg')}}" alt="Cobiro logo"/></a>
+								<a href="/" ><img src="includes/img/logo.svg" alt="Cobiro logo"/></a>
 							</div>
 							<button class="menu-toggle btn" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"
 								>
@@ -26,7 +26,7 @@
 										<div class="container">
 											<div class="row">
 												<div class="col col-xs-12 col-lg-3">
-													<img class="submenu-icon" src="{{url('includes/img/pen.svg')}}" alt="ikon"/>
+													<img class="submenu-icon" src="includes/img/pen.svg" alt="ikon"/>
 													<a class="submenu-title" href="#">Create</a>
 													<ul class="list-unstyled">
 														<li><a href="#">Search</a></li>
@@ -36,7 +36,7 @@
 													</ul>
 												</div>
 												<div class="col  col-xs-12 col-lg-3">
-													<img class="submenu-icon" src="{{url('includes/img/pen.svg')}}" alt="ikon"/>
+													<img class="submenu-icon" src="includes/img/pen.svg" alt="ikon"/>
 													<a class="submenu-title" href="#">Connect</a>
 													<ul class="list-unstyled">
 														<li><a href="#">Search</a></li>
@@ -46,7 +46,7 @@
 													</ul>
 												</div>
 												<div class="col col-xs-12 col-lg-3">
-													<img class="submenu-icon" src="{{url('includes/img/pen.svg')}}" alt="ikon"/>
+													<img class="submenu-icon" src="includes/img/pen.svg" alt="ikon"/>
 													<a class="submenu-title" href="#">Automate</a>
 													<ul class="list-unstyled">
 														<li><a href="#">Search</a></li>
@@ -56,7 +56,7 @@
 													</ul>
 												</div>
 												<div class=" col col-xs-12 col-lg-3">
-													<img class="submenu-icon" src="{{url('includes/img/pen.svg')}}" alt="ikon"/>
+													<img class="submenu-icon" src="includes/img/pen.svg" alt="ikon"/>
 													<a class="submenu-title" href="#">Report</a>
 													<ul class="list-unstyled">
 														<li><a href="#">Search</a></li>
