--- a/templates/includes/sections/featured-companies.twig
+++ b/templates/includes/sections/featured-companies.twig
@@ -7,16 +7,16 @@
 					<p>Join more than 50,000 customers who manage ads better</p>
 				</div>
 				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="{{url('includes/img/thomas-logo.svg')}}" alt="customer logo" />
+					<img src="includes/img/thomas-logo.svg" alt="customer logo" />
 				</div>
 				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="{{url('includes/img/google-logo.svg')}}" alt="customer logo" />
+					<img src="includes/img/google-logo.svg" alt="customer logo" />
 				</div>
 				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="{{url('includes/img/boozt-logo.svg')}}" alt="customer logo" />
+					<img src="includes/img/boozt-logo.svg" alt="customer logo" />
 				</div>
 				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="{{url('includes/img/thomas-logo.svg')}}" alt="customer logo" />
+					<img src="includes/img/thomas-logo.svg" alt="customer logo" />
 				</div>
 			</div>
 		</div>
