--- a/templates/includes/sections/explanation-right.twig
+++ b/templates/includes/sections/explanation-right.twig
@@ -3,7 +3,7 @@
 		<div class="row middle-xs">
 			<div class="col col-sm-12 col-md-6">
 				<div class="img-responsive space-sm space-xs">
-					<img src="{{url('includes/img/busy-lady.svg')}}" alt="Marketing Image" />
+					<img src="includes/img/busy-lady.svg" alt="Marketing Image" />
 				</div>
 			</div>
 			<div class="col col-sm-12 col-md-6">
