--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -9,7 +9,7 @@
 				</div>
 			</div>
 			<div class="col col-xs-12 col-md-6">
-				<img class="img-responsive img-full-width" src="{{url('includes/img/jumbo-header-image.svg')}}" alt="Cobiro logo" />
+				<img class="img-responsive img-full-width" src="includes/img/jumbo-header-image.jpg" alt="Cobiro logo" />
 			</div>
 		</div>
 	</div>
